--- a/src/static/assets/index.css
+++ b/src/static/assets/index.css
@@ -8,6 +8,41 @@ body {
     overflow-x: hidden;
   }
   
+  #h1-main{
+    display: inline-block;
+    font-size: 5rem; font-weight: 900; color: #f9e45b;text-shadow: -1px 5px 0 #1b4d89,
+    1px 1px 0 #1b4d89,
+  1px -1px 0 #1b4d89,
+  -1px -1px 0 #1b4d89;
+  transition: all ease 0.4s;
+
+  }
+  #h1-main:hover{
+    text-shadow: -1px 10px 0 #1b4d89,
+                  1px 1px 0 #1b4d89,
+                1px -1px 0 #1b4d89,
+                -1px -1px 0 #1b4d89;
+    transition: all ease 0.4s;
+  }
+
+  #h2-main{
+    /* display: table-caption; */
+    color: #f9e45b; font-size: 3rem; margin-left: 2cm;text-shadow: -1px 3px 0 #1b4d89,
+    1px 1px 0 #1b4d89,
+   1px -1px 0 #1b4d89,
+  -1px -1px 0 #1b4d89;
+transition: all ease 0.4s;
+
+  }
+
+  #h2-main:hover{
+    text-shadow: -1px 5px 0 #1b4d89,
+    1px 1px 0 #1b4d89,
+  1px -1px 0 #1b4d89,
+  -1px -1px 0 #1b4d89;
+transition: all ease 0.4s;
+
+  }
   h1{
     font-size: 4rem;
     font-weight: 800;
@@ -287,7 +322,8 @@ body {
 
 #compression-result.show {
   opacity: 1;
-  height: auto;
+  height: 20cm;
+  overflow: hidden;
   transition: all 0.75s ease-in-out;
   margin-bottom: 50px;
 }
@@ -307,8 +343,18 @@ body {
 }
 
 #show-button:hover{
-  background: #0e2542;
-  box-shadow: 5px 10px 30px rgba(32, 32, 32, 0.911);
+  box-shadow: 0 1px 0 #ccc, 
+  0 1.5px 0 #c9c9c9,
+  0 2px 0 #bbb,
+  0 2.5px 0 #b9b9b9,
+  0 3px 0 #aaa,
+  0 6px 1px rgba(0,0,0,.1),
+  0 0 5px rgba(0,0,0,.1),
+  0 1px 3px rgba(0,0,0,.3),
+  0 3px 5px rgba(0,0,0,.2),
+  0 5px 10px rgba(0,0,0,.25),
+  0 10px 10px rgba(0,0,0,.2),
+  0 20px 20px rgba(0,0,0,.15);
   transition: all ease 0.4s;
 }
 
@@ -352,13 +398,42 @@ body {
 }
 
 #download-button button:hover{
-  background: rgba(17, 41, 13, 0.911);
-  box-shadow: 5px 10px 30px rgba(32, 32, 32, 0.911);
+  box-shadow: 0 1px 0 #ccc, 
+  0 1.5px 0 #c9c9c9,
+  0 2px 0 #bbb,
+  0 2.5px 0 #b9b9b9,
+  0 3px 0 #aaa,
+  0 6px 1px rgba(0,0,0,.1),
+  0 0 5px rgba(0,0,0,.1),
+  0 1px 3px rgba(0,0,0,.3),
+  0 3px 5px rgba(0,0,0,.2),
+  0 5px 10px rgba(0,0,0,.25),
+  0 10px 10px rgba(0,0,0,.2),
+  0 20px 20px rgba(0,0,0,.15);
+  transition: all ease 0.4s;
+}
+#about-us{
+  margin-bottom: 3cm;
+}
+
+.main-about-us{
   transition: all ease 0.4s;
 }
 
-#about-us {
-  margin-bottom: 3cm;
+.main-about-us:hover{
+  text-shadow: 0 1px 0 #ccc, 
+  0 2px 0 #c9c9c9,
+  0 3px 0 #bbb,
+  0 4px 0 #b9b9b9,
+  0 5px 0 #aaa,
+  0 6px 1px rgba(0,0,0,.1),
+  0 0 5px rgba(0,0,0,.1),
+  0 1px 3px rgba(0,0,0,.3),
+  0 3px 5px rgba(0,0,0,.2),
+  0 5px 10px rgba(0,0,0,.25),
+  0 10px 10px rgba(0,0,0,.2),
+  0 20px 20px rgba(0,0,0,.15);
+  transition: all ease 0.4s;
 }
 
 .card {
@@ -400,15 +475,118 @@ body {
 }
 
 .profile-left{
-  box-shadow: -7px 10px 0 #1b4d89,
+  transition: all ease 0.4s;
+}
+
+.profile-left:hover{
+  /* box-shadow: -10px 10px 0 #1b4d89,
+                1px 1px 0 #1b4d89,
+              1px -1px 0 #1b4d89,
+              -1px -1px 0 #1b4d89; */
+    box-shadow: 0 6px 1px rgba(0,0,0,.1),
+                0 0 5px rgba(0,0,0,.1),
+                0 1px 3px rgba(0,0,0,.3),
+                0 3px 10px rgba(0,0,0,.2),
+                0 5px 15px rgba(0,0,0,.25),
+                0 10px 25px rgba(0,0,0,.2),
+                0 50px 40px rgba(0,0,0,.15);
+                transition: all ease 0.4s;
+}
+
+.profile-right{
+  box-shadow: 10px 10px 0 #1b4d89,
                 1px 1px 0 #1b4d89,
               1px -1px 0 #1b4d89,
               -1px -1px 0 #1b4d89;
 }
 
-.profile-right{
-  box-shadow: 7px 10px 0 #1b4d89,
-                1px 1px 0 #1b4d89,
-              1px -1px 0 #1b4d89,
-              -1px -1px 0 #1b4d89;
+
+
+/* slider */
+input[type=range] {
+  height: 38px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 50%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000;
+  background: #1b4d89;
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -11px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #1b4d89;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000;
+  background: #1b4d89;
+  border-radius: 5px;
+  border: 1px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #1b4d89;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #1b4d89;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #FFFFFF;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #1b4d89;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #1b4d89;
 }
