Deleting Unused CSS

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -72,23 +72,10 @@
       <input type="file" name="file" class="form-control" autocomplete="off" id = "file" accept = ".png, .jpg, .jpeg" required >
       <br>
       <input type="range" min="0" max="100" value="0" class="compressionrate"  name = "rate" id = "reportCompression">
-      <p>Compression Rate : <span id="rateShow"></span> %</p>
-
-      <!-- DESIGN SLIDER -->
-      <!-- <div class="container">
-  
-        <div class="range-slider">
-          <span id="rs-bullet" class="rs-label">0</span>
-          <input id="rs-range-line" class="rs-range" type="range" value="0" min="0" max="200">
-          
-        </div>
-        
-        <div class="box-minmax">
-          <span>0</span><span>200</span>
-        </div>
-        
-      </div> -->
-
+    <p>
+      Compression Rate : <span id="rateShow"></span> %
+    </p>
+    
     <p>
         <input type="submit" value="Submit" class="btn btn-info" id = "submit-button">
     </p>
