--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -75,7 +75,7 @@
     <p>
       Compression Rate : <span id="rateShow"></span> %
     </p>
-    
+
     <p>
         <input type="submit" value="Submit" class="btn btn-info" id = "submit-button">
     </p>
@@ -110,10 +110,10 @@
       
       <div class="row-image">
         <div class="column-image">
-            <img src="data:image/{{ img_format }};base64,{{ basename }}" style="width: 75%;" alt = "Before" id = "before-image">
+            <img src="data:image/{{ img_format }};base64,{{ basename }}" alt = "Before" id = "before-image">
         </div>
         <div class="column-image">
-            <img src="data:image/{{ img_format }};base64,{{ filename }}" style="width: 75%;" alt = "After" id = "after-image">
+            <img src="data:image/{{ img_format }};base64,{{ filename }}" alt = "After" id = "after-image">
         </div>
       </div>
     </div>
